# IPCV

./: CMakeLists.txt  README.md
cmake/: CMakeUtils.cmake  Executables.cmake  Libraries.cmake
data/images/awb/: README  clayton_missouri_awb.ppm
data/images/gamma/: README  grayscale_linear_gamma.pgm
data/images/raw/rpi/: README
data/images/raw/simulated/: README
imgs/: CMakeLists.txt
imgs/apps/: CMakeLists.txt
imgs/apps/awb_grayworld/: CMakeLists.txt
imgs/apps/bilateral_filter/: CMakeLists.txt  bilateral_filter.cpp
imgs/apps/character_recognition/: CMakeLists.txt  change_char_quality.cpp  character_recognition.cpp
imgs/apps/demosaic_bilinear/: CMakeLists.txt  demosaic_bilinear.cpp
imgs/apps/demosaic_laroche_and_prescott/: CMakeLists.txt
imgs/apps/display/: CMakeLists.txt  display.cpp
imgs/apps/examples/: CMakeLists.txt
imgs/apps/examples/diana/: CMakeLists.txt  diana.cpp
imgs/apps/examples/fourier/: CMakeLists.txt  test_dft.cpp
imgs/apps/examples/image_comparison/: CMakeLists.txt  image_comparison.cpp
imgs/apps/examples/plot2d/: CMakeLists.txt  plot2d.cpp
imgs/apps/fast_corners/: CMakeLists.txt  fast_corners.cpp
imgs/apps/fft_display/: CMakeLists.txt  fft_display.cpp
imgs/apps/frequency_filter/: CMakeLists.txt  frequency_filter.cpp
imgs/apps/gamma_correct/: CMakeLists.txt
imgs/apps/harris_corners/: CMakeLists.txt  harris_corners.cpp
imgs/apps/histogram_enhance/: CMakeLists.txt  histogram_enhance.cpp
imgs/apps/plot_histogram/: CMakeLists.txt  plot_histogram.cpp
imgs/apps/quantize/: CMakeLists.txt
imgs/apps/spatial_filter/: CMakeLists.txt  spatial_filter.cpp
imgs/apps/threshold/: CMakeLists.txt  threshold.cpp
imgs/apps/transform_gcp/: CMakeLists.txt  transform_gcp.cpp
imgs/apps/transform_q2q/: CMakeLists.txt  transform_q2q.cpp
imgs/apps/transform_rst/: CMakeCache.txt  CMakeLists.txt  transform_rst.cpp
imgs/ipcv/: CMakeLists.txt
imgs/ipcv/bilateral_filtering/: BilateralFilter.cpp  BilateralFilter.h  CMakeLists.txt
imgs/ipcv/character_recognizing/: CMakeLists.txt  CharacterRecognition.cpp  CharacterRecognition.h
imgs/ipcv/corners/: CMakeLists.txt  Corners.h  Fast.cpp  Fast.h  Harris.cpp  Harris.h
imgs/ipcv/demosaicing/: CMakeLists.txt  Demosaic.h  Homogeneity.cpp  Homogeneity.h  LarochePrescott.h
imgs/ipcv/frequency_filtering/: CMakeLists.txt  FrequencyFilter.cpp  FrequencyFilter.h
imgs/ipcv/geometric_transformation/: CMakeLists.txt  GeometricTransformation.h  MapGCP.cpp  MapGCP.h  MapQ2Q.cpp  MapQ2Q.h  MapRST.cpp  MapRST.h  MapRotation3D.cpp  MapRotation3D.h  Remap.cpp  Remap.h
imgs/ipcv/histogram_enhancement/: CMakeLists.txt  HistogramEnhancement.h  LinearLut.cpp  LinearLut.h  MatchingLut.cpp  MatchingLut.h
imgs/ipcv/otsus_threshold/: CMakeLists.txt  OtsusThreshold.cpp  OtsusThreshold.h
imgs/ipcv/quantize/: CMakeLists.txt  Quantize.cpp  Quantize.h
imgs/ipcv/spatial_filtering/: CMakeLists.txt  Filter2D.cpp  Filter2D.h
imgs/ipcv/utils/: ApplyLut.cpp  ApplyLut.h  CMakeLists.txt  DeltaE.cpp  DeltaE.h  Dft.cpp  Histogram.cpp  HistogramToCdf.cpp  HistogramToPdf.cpp  Indices.cpp  Indices.h  Psnr.cpp  Psnr.h  Rmse.cpp  Rmse.h  Utils.h
imgs/plot/: CMakeLists.txt  plot.h
imgs/plot/plot2d/: Params.cpp  Params.h  Plot2d.cpp  Plot2d.h
